<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>oryanmoshe.kafka.connect.util</groupId>
  <artifactId>TimestampConverter</artifactId>
  <packaging>jar</packaging>
  <version>1.3.0-SNAPSHOT</version>
  <name>TimestampConverter</name>
  <url>http://maven.apache.org</url>

  <properties>
    <version.debezium>1.2.0.Final</version.debezium>
    <version.kafka>2.5.0</version.kafka>
    <junit.jupiter.version>5.4.1</junit.jupiter.version>
    <maven.shade.version>3.2.1</maven.shade.version>
    <!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
    <maven.surefire.version>2.22.1</maven.surefire.version>
  </properties>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub oryanmoshe Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/oryanmoshe/debezium-timestamp-converter</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <compilerArgs>
            <arg>-Xlint:all</arg>
            <!-- <arg>-Werror</arg> -->
          </compilerArgs>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${maven.shade.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.version}</version>
        <configuration>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>io.debezium</groupId>
      <artifactId>debezium-api</artifactId>
      <version>${version.debezium}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>connect-api</artifactId>
      <version>${version.kafka}</version>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>23.6-jre</version>
    </dependency>
  </dependencies>
</project>
